@@ -1,8 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.2
 Date: ????
+  Features:
+    - Added argument to `misc.ticks_to_timestring` to preserve leading zeroes
   Bugfixes:
-    - Fixed math.maxuint being one too great
+    - Fixed math.maxuint being one number too large
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.1
 Date: 2021-01-02
